[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "chip8_emulator_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "chip8-emulator"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.32"
clap = { version = "4.1.13", features = ["derive"] }
anyhow = "1.0.70"
rodio = "0.17.1"
pixels = "0.12.1"
winit = "0.28.3"
game-loop = { version = "0.10.2", features = ["winit"] }
winit_input_helper = "0.14.1"
toml = "0.7.4"
platform-dirs = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
